deprecated constructors and README updates